cabal-version: 2.3
name: quantum
version: 0.0.1
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple
Maintainer:  teto
Category:   Network
Synopsis: A Multipath TCP analyzer
Homepage:   https://github.com/teto/quantum
Description:
  Multipath TCP (www.multipath-tcp.org) analyzer
Extra-source-files:
  headers/*.h README.md CHANGELOG

Source-repository head
  type:       git
  location:   https://github.com/teto/quantum


Flag Dev {
  Description: Develop with a local netlink library
  Default:     True
}


-- aeson to (de)serialize to json
-- text is used to convert from string and in aeson
-- http://hackage.haskell.org/package/bitset-1.4.8/docs/Data-BitSet-Word.html
common shared-properties
    build-depends: base >= 4.12 && < 4.20, optparse-applicative,
      containers
      , katip
      , bytestring, process, cereal, ip,
       netlink >= 1.1.1.0, bytestring-conversion
       , transformers
       , text
       , mtl
       , hslogger
       -- for merge
       , aeson
       , aeson-pretty
       , aeson-extra
       -- to help with merging json content
       , unordered-containers
       -- to create temp folder/files
       , temporary
       , filepath
       , repline
       -- , frames
       -- , bitset  -- bitset, interesting but broken

    default-language: Haskell2010
    -- -fno-warn-unused-imports 
    -- -fforce-recomp  makes it build twice
    ghc-options: -Wall -fno-warn-unused-binds -fno-warn-unused-matches -threaded -fprof-auto -rtsopts
    Other-modules:     



-- monitor new mptcp connections
-- and delegate the behavior to a monitor
executable mptcpanalyzer
    import: shared-properties
    -- ghc-options: -prof
    main-is: Main.hs
    hs-source-dirs: src/
    build-depends: haskeline

Test-Suite test
--   -- 2 types supported, exitcode is based on ... exit codes ....
  type:               exitcode-stdio-1.0
  main-is:            test/Main.hs
--   hs-source-dirs:     .
--   default-language: Haskell2010
--   -- import: shared-properties
--   Build-tools:       hsc2hs, c2hs
--   Includes:          tcp_states.h, linux/sock_diag.h, linux/inet_diag.h
--   Other-modules:     Net.SockDiag, Net.Mptcp, Net.IPAddress, Net.Mptcp.Constants, Net.SockDiag.Constants, 
--                     Net.SockDiag.Constants, Net.Tcp.Constants
--   autogen-modules: Net.Mptcp.Constants, Net.SockDiag.Constants
--   include-dirs:      headers
  build-depends:      base >=4.12 && <4.20
                     , HUnit
--                      , netlink
--                      , cereal
--                      , ip
--                      , bytestring
--                      , containers
--                      , aeson
