cabal-version: 3.0
name: quantum
version: 0.0.1
license: GPL-3.0-only
license-file: LICENSE
build-type: Simple
Maintainer:  teto
Category:   Network
Synopsis: A Multipath TCP analyzer
Homepage:   https://github.com/teto/quantum
Description:
  Multipath TCP (www.multipath-tcp.org) analyzer
Extra-source-files:
  README.md CHANGELOG

Source-repository head
  type:       git
  location:   https://github.com/teto/quantum



-- aeson to (de)serialize to json
-- text is used to convert from string and in aeson
-- http://hackage.haskell.org/package/bitset-1.4.8/docs/Data-BitSet-Word.html
common shared-properties
    build-depends: base >= 4.12 && < 4.20, optparse-applicative
      , containers
      -- diagrams is not ready for 8.10
      -- , diagrams
      , katip
      , readable
      , polysemy
      , polysemy-plugin
      , bytestring, process
      , ip
      -- , netlink >= 1.1.1.0
      -- , bytestring-conversion
       , transformers
       , template-haskell
       , exceptions
       , ghc-prim
       , foldl
       , text
       , mtl
       -- microlens taken from Frames
       -- , microlens
       , lens
       -- for merge
       , aeson
       , aeson-pretty
       , aeson-extra
       , monad-control
       , pipes
       -- to help with merging json content
       -- , unordered-containers
       -- to create temp folder/files
       , temporary
       , transformers-base
       , singletons
       , filepath
       , repline
       , Frames
       , Cabal
       , directory
       , vinyl
       , vector
       , haskeline >= 0.8.0.0
       -- , bitset  -- bitset, interesting but broken
       , mptcp-pm >= 0.0.3
    default-language: Haskell2010
    -- -fno-warn-unused-imports
    -- -fforce-recomp  makes it build twice

    -- -ddump-splices to dump TH code
    ghc-options:
        -Wall -fno-warn-unused-binds -fno-warn-unused-matches -threaded -fprof-auto -rtsopts -fplugin=Polysemy.Plugin
        -ddump-splices -ddump-to-file -dth-dec-file
    default-extensions:
        FlexibleContexts
        , DataKinds
        , FlexibleContexts
        , GADTs
        , LambdaCase
        , PolyKinds
        , RankNTypes
        , ScopedTypeVariables
        , TemplateHaskell
        , TypeApplications
        , TypeOperators
        , TypeFamilies
    -- Other-modules:



-- monitor new mptcp connections
-- and delegate the behavior to a monitor
executable mptcpanalyzer
    import: shared-properties
    Other-modules:     Tshark.TH, Pcap, Cache, Commands.Load, Columns, Commands.Utils, Commands.List, Utils, Connection,
        Plots.Stream
    -- for now reference mptcp-pm but later move part to a core
    -- build-depends: mptcp-pm >= 0.0.3
    -- ghc-options: -prof
    main-is: Main.hs
    hs-source-dirs: src/

-- Test-Suite test
--   -- 2 types supported, exitcode is based on ... exit codes ....
--   type:               exitcode-stdio-1.0
--   main-is:            test/Main.hs
--   Other-modules:     Pcap, Columns
--   build-depends:      base >=4.12 && <4.20
--                      , HUnit
